add stege otp
